# sub_ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  sub_sites.md
scripts/: deploy_qnap.sh
src/ai_discovery/: __init__.py  admin_service.py  admin_store.py  admin_web.py  ai_client.py  cli.py  config.py  db.py  digest.py  http.py  models.py  pipeline.py  site_sessions.py  source_registry.py  sources.py
tests/: test_admin_service.py  test_admin_store.py  test_admin_web.py  test_ai_client.py  test_config.py  test_db.py  test_digest.py  test_empty_digest_notice.py  test_pipeline_support.py  test_registry.py  test_site_sessions.py  test_sources.py  test_state_machine.py
